java1-springboot-project/spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      serviceAccountName: sa-spring-boot-app
      containers:
      - name: spring-boot-app
        image: kenzieeiy/java1-cicd:99
        ports:
        - containerPort: 8080
