java1-springboot-project/spring-boot-app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "java.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
